--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ main{
 .menu {
   background: #bbbbbb;
   width: 120rem;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
