--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,13 @@
   font-size: 62.5%;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  display: flex;
 }
 
 main{
@@ -13,21 +16,29 @@ main{
   display: flex;
   justify-content: center;
   text-align: center;  
+  
 }
 
 .menu {
   background: #bbbbbb;
-  width: 120rem;
+  width: 20%;
+  height: 100%;
+  background-image: linear-gradient(to bottom, blue, red);
+  padding: 3rem;
   display: flex;
   justify-content: center;
   flex-direction: column;   
+  position: fixed;
+
 
 }
 
 
-nav li {
-  margin: 25px 0 0 0;  
-  
+nav ul {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;    
 }
 
 nav a {
@@ -39,7 +50,12 @@ nav a {
 }
 
 .principal {
-  box-shadow: inset 0 0 30px #000000;
+  width: 80%;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: inset 0 0 3rem #000000;
 }
 
 h1{
