--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 62.5%;
-}
-
 html, body {
   height: 100%;
   width: 100%;
@@ -20,16 +16,22 @@ main{
 }
 
 .menu {
-  width: 25%;
+  width: 15%;
   height: 100%;
-  background-image: linear-gradient(to bottom, blue, red);
+  background-image: var(--azul-menu-1), var(--azul-menu-2);
   padding: 1rem;
   display: flex;
   flex-direction: column;   
-  justify-content: center;
+  /* justify-content: center; */
+  align-items: center;
   position: fixed;
+  font-size: 2rem;
 }
 
+.logoTransCode {
+  width: 108px;
+  height: 122px;
+}
 
 nav ul {
   width: 100%;
@@ -44,6 +46,11 @@ nav a {
   font-weight: bold;
   font-size: 1rem;
   text-decoration: none;
+}
+
+.logoAlura,
+.logoSuzano {
+  width: 80px;
 }
 
 .principal {
