--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ main{
 }
 
 .menu {
-  width: 15%;
+  width: 25%;
   height: 100%;
   background-image: var(--azul-menu-1), var(--azul-menu-2);
   padding: 1rem;
@@ -54,12 +54,13 @@ nav a {
 }
 
 .principal {
-  width: 75%;  
+  width: 100%;  
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   box-shadow: inset 0 0 3rem #000000;
+  margin-left: 25%;
 }
 
 h1{
