--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,16 @@
 html, body {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
+  height: 100%;
+  width: 100%;  
 }
 
-main{
-  font-size: 2rem;
-  display: flex;
-  justify-content: center;
-  text-align: center;  
-  
+body{  
+  display: flex;  
 }
 
 .menu {
   width: 25%;
   height: 100%;
-  background-image: linear-gradient(
-    to bottom, var(--azul-menu-1), var(--azul-menu-2));
+  background-image: var(--azul-menu-1), var(--azul-menu-2);
   padding: 1rem;
   display: flex;
   flex-direction: column;   
@@ -51,7 +45,6 @@ nav a {
   width: 80px;
 }
 
-<<<<<<< HEAD
 .bandeiraLateral {
   position: fixed;
   width: 3%;
@@ -67,28 +60,19 @@ nav a {
   right: 0%;
 }
 
-=======
-main{
-  font-size: 2.5rem;
-  display: flex;
-  justify-content: center;
-  text-align: center; 
-  margin-left: 21%; 
-  
-}
-
-
->>>>>>> origin/main
-.principal {
-  width: 100vw;  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;  
+main {
+  width: 75%;
   margin-left: 25%;
-  position: relative;
-
+  margin-right: 3%;
 }
+
+.principal {
+  width: 100%;  
+  display: flex;
+  flex-direction: column;  
+  justify-content: center;
+  align-items: center;  
+ }
 
 .video {
   height: 369px;
@@ -101,15 +85,15 @@ main{
   font-size: 40px;
   font-weight: 700;
   line-height: 43px;
-  margin-bottom: 3.3em;
-  position: absolute;
+  margin-top: 1em;
+  margin-bottom: 1em;
+ // position: absolute;
   top: 1.5em;
   left: 1em;
 }
 
 .textoQuemSomos {
-  height: 1.25em;
-  width: 33em;
+  width: 50em;
 }
 
 
