alinhando os textos

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
   background: url(/images/fotoFundoPrincipal.jpeg) no-repeat fixed;
   background-size: 100% 100%;
   flex: 2;
+  color: var(--branco-bandeira);
 }
 
 .paginaPrincipal::before {
@@ -29,8 +30,7 @@ body{
   background-image: var(--azul-menu-1), var(--azul-menu-2);
   padding: 1rem;
   display: flex;
-  flex-direction: column;   
-  /* justify-content: center; */
+  flex-direction: column;     
   align-items: center;
   position: fixed;
   flex: 1;
@@ -52,7 +52,7 @@ nav ul {
 
 nav a {
   text-transform: uppercase;
-  color: #000000;
+  color:var(--branco-bandeira);
   font-weight: bold;
   font-size: 2rem;
   text-decoration: none;  
@@ -91,13 +91,14 @@ main {
   flex-direction: column;  
   justify-content: center;
   align-items: center;  
+  
  }
 
 .video {
-  height: 369px;
-  width: 539px;
+  height: 36.9rem;
+  width: 53.9rem;
   border: #000000 1px solid;
-  margin-bottom: 2.75em;
+  margin-bottom: 2rem;
   z-index: 1;
 }
 
@@ -105,18 +106,23 @@ main {
   font-size: 4rem;
   font-weight: 700;
   line-height: 4.3rem;
-  margin-top: 1em;
-  margin-bottom: 1em;
- // position: absolute;
-  top: 1.5em;
-  left: 1em; 
-  
+  margin: 2rem 1rem;  
+  align-self: flex-start;  
 }
+
 
 .textoQuemSomos {
-  width: 50em;
+  width: 60rem;
+  margin: 1rem;
+  font-weight: 700;
+  font-size: 1.7rem;
 }
 
+.chaves {
+  font-size: 4rem;
+  font-weight: 700; 
+  margin-left: -30rem;
+}
 
 footer {
 background: linear-gradient(130deg, rgba(252,70,107,1) 0%, rgba(9,9,121,1) 55%, rgba(0,212,255,1) 100%);
