--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -25,7 +25,7 @@ body{
 }
 
 .menu {
-  width: 15%;
+  width: 17%;
   height: 100%;
   background-image: var(--azul-menu-1), var(--azul-menu-2);
   padding: 1rem;
@@ -38,7 +38,7 @@ body{
 
 .logoTransCode {
   width: 108px; 
-  margin: 2rem auto;
+  margin: 3rem auto;
 }
 
 nav ul {
@@ -58,10 +58,16 @@ nav a {
   text-decoration: none;
 }
 
+.logos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 8rem;  
+}
+
 .logoAlura,
-.logoSuzano {
-  margin: 5rem auto;
-  width: 9rem;
+.logoSuzano { 
+  width: 8rem;  
 }
 
 .bandeiraLateral {
@@ -80,8 +86,8 @@ nav a {
 }
 
 main {
-  width: 85%;
-  margin-left: 15%;
+  width: 83%;
+  margin-left: 17%;
   margin-right: 3%;
 }
 
@@ -99,8 +105,8 @@ main {
   width: 53.9rem; 
   border: #000000 16px solid;*/
   
-  height: 449px;
-  width: 619px;
+  height: 400px;
+  width: 600px;
   background: var(--fundo-video);
   display: flex;
   align-items: center;
@@ -110,10 +116,10 @@ main {
 }
 
 .tituloQuemSomos {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 700;
   line-height: 4.3rem;
-  margin: 2rem 1rem;  
+  margin: 1rem;  
   align-self: flex-start;  
 }
 
@@ -122,11 +128,11 @@ main {
   width: 60rem;
   margin: 1rem;
   font-weight: 700;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
 }
 
 .chaves {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 700; 
   margin-left: -30rem;
 }
