--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,15 @@ main {
   align-items: center;
 }
 
+.videoSection {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+
+}
+
 .video {  
   height: 40rem;
   width: 60rem;
@@ -123,7 +132,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin-bottom: 2rem;  
   z-index: 1;
   border-radius: 10px;
 }
