--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*********************      geral   ****************************/
 html, body {
   height: 100vh;
   width: 100%;
@@ -5,8 +6,10 @@ html, body {
 
 body{
   display: flex;  
+  flex-direction: column;  
 }
 
+/*********************   Imagem Fundo Principal   ****************************/
 .paginaPrincipal {
   background: url(../images/fotoFundoPrincipal.jpeg) no-repeat fixed;
   background-size: 100% 100%;
@@ -25,6 +28,8 @@ body{
   left: 0px;
   background-color: var(--opacidade-fundo);
 }
+
+/*********************      Menu Fixo   ****************************/
 
 .menu {
   width: 17%;
@@ -96,25 +101,36 @@ body{
   right: 0%;
 }
 
+/*********************     conteudo geral   ****************************/
+
 main {
   width: 83%;
+  height: 100vh;
   margin-left: 17%;
-  margin-right: 3%;
+  margin-right: 3%;  
+  
 }
 
 .principal {
-  width: 100%;
+  width: 100%;  
   display: flex;  
-  justify-content: center;  
+  justify-content: center;    
 }
 
 .principalConteudo {
-  width: 105rem;  
+  width: 105rem;   
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
+  z-index: 1;
+  
+
 }
+
+/*********************      conteudo   ****************************/
+
 
 .videoSection {
   width: 100%;
@@ -132,8 +148,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;  
-  z-index: 1;
+  margin-bottom: 2rem;    
   border-radius: 10px;
 }
 
@@ -155,6 +170,23 @@ main {
   font-size: 3rem;
   font-weight: 700;
   align-self: flex-start;
+}
+
+/*********** Section 2 **************/
+.SegundoConteudo {
+  width: 100%;  
+  display: flex;    
+  justify-content: center; 
+  background: var(--opacidade-fundo);
+}
+
+.imagemFundoSection2 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 9rem;
+}
+
 }
 
 footer {
