--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ main {
 
 .imagemFundoSection2 {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   flex-direction: column;
   gap: 9rem;
 }
