--- a/css/style.css
+++ b/css/style.css
@@ -144,13 +144,13 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 3rem;
+  gap: 1rem;
   margin: 1rem auto;
 }
 
 .video {  
-  width: 48%;
-  height: 100%;
+  /*width:50%;
+  height: 100%;*/
   background: var(--fundo-video);
   display: flex;
   align-items: center;
@@ -160,7 +160,9 @@ main {
 }
 
 .videoTamanho {
-  width: 80%;
+  width: 100%;
+  height: 100%;
+  margin: 4rem;
 }
 
 .vetores {
