--- a/css/style.css
+++ b/css/style.css
@@ -1,574 +1,18 @@
 /*********************      geral   ****************************/
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 
 body {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;  
-}
-
-.paginaPrincipal {
-  flex: 2;
-  color: var(--branco);
-  display: flex;
-  align-items: center;
-}
-
-
-/*********************      Menu Fixo   ****************************/
-
-.menu {
-  width: 15%;
-  height: 100vh;
-  background: var(--fundo-menu);
-  padding: auto;
-  align-self: center;
-  position: fixed;
-  
-  margin-top: 0;
-}
-
-.menuSection {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.logoTransCode {
-  width: 10.8rem;
-  margin: 3rem auto;
-}
-
-.navegacaoLista {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2.6rem;
-  margin: 8rem auto;
-}
-
-.navegacaoLinks {
-  text-transform: uppercase;
-  color: var(--branco);
-  font-weight: bold;
-  font-size: 1.6rem;
-  text-decoration: none;
-}
-
-.logos {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin-top: 8rem;
-}
-
-.logoAlura,
-.logoSuzano {
-  width: 8rem;
-}
-
-.hamburger {
   
 }
 
-/*********************     conteudo geral   ****************************/
-
-main {
-  width: 100%;
-  height: 100vh; 
-}
-
-.principal {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background: var(--fundoPrincipalConteudo); 
-  margin-left: 15%; 
-}
-
-.principalConteudo {
-  width: 105rem;
+.paginas {
+  scroll-snap-type: y mandatory;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
-  margin: 0;
+  overflow-y: scroll;
 }
-
-/*********************      conteudo   ****************************/
-.tituloQuemSomos {
-  font-size: 2.7rem;
-  font-weight: 700;
-  line-height: 4.3rem;
-  align-self: flex-start;
-  margin-bottom: 4 rem;
-  margin-left: 5rem;
-}
-
-.textoQuemSomos {
-  width: 60%;
-  margin: 2rem;
-  font-weight: 500;
-  font-size: 1.6rem;
-}
-
-.chaves {
-  font-size: 3rem;
-  font-weight: 700;
-  align-self: flex-start;
-  margin-top: 2rem;
-  margin-left: 5rem;
-}
-
-.videoSection {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem; 
-  margin-top: 8rem;
-}
-
-.video {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-  margin: 0 4rem 5rem 4rem;
-}
-
-.videoTamanho {
-  width: 100%;
-  height: 100%;
-  margin: 4rem;
-}
-
-.vetores {
-  width: 8rem;
-  margin-bottom: 5rem;
-}
-
-
-/*********** Section 2 **************/
-.SegundoConteudo {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  background: var(--fundoSegundoConteudo);
-  margin-left: 15%; 
-}
-
-.titulo2,
-.texto2,
-.titulo3,
-.texto3, 
-.linkTexto3 {
-  width: 60%;
-  margin: 2rem;
-  font-weight: 700;
-  font-size: 1.8rem;
-  color: var(--roxo);
-  line-height: 2.5rem;
-}
-
-.titulo3,
-.texto3,
-.linkTexto3 {
-  color: var(--branco);
-}
-
-.linkTexto3 {
-  text-decoration: none;
-}
-
-footer {
-  background: linear-gradient(
-    130deg,
-    rgba(252, 70, 107, 1) 0%,
-    rgba(9, 9, 121, 1) 55%,
-    rgba(0, 212, 255, 1) 100%
-  );
-  background-size: 200% 200%;
-  animation: backgroundTransition 8s ease-in-out infinite;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 15rem;
-}
-
-footer img {
-  width: 10%;
-  padding: 2rem;
-}
-
-@keyframes backgroundTransition {
-  0% {
-    background-position: 0% 70%;
-  }
-  50% {
-    background-position: 70% 100%;
-  }
-  100% {
-    background-position: 0% 80%;
-  }
-}
-
-/*-----------Código que o Rapha fez do menu responsivo até travar----------------*/
-/* vou deixar o código comentado pra não conflitar com o que fizemos até agora*/
-/*********************      geral   ****************************/
-/* html,
-body {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  background: linear-gradient(
-    180deg,
-    #2c2a4a 6.77%,
-    rgba(96, 93, 143, 0.981013) 22.92%,
-    rgba(96, 93, 143, 0.984789) 54.17%,
-    rgba(255, 255, 255, 0.97) 80.73%,
-    rgba(44, 42, 74, 0.98481) 100%
-  );
-  background-size: cover;
-}
-*/
-/*********************   Imagem Fundo Principal   ****************************/
-/*
-.paginaPrincipal {
-  flex: 2;
-  color: var(--branco-bandeira);
-  display: flex;
-  align-items: center;
-}
-
-/* .paginaPrincipal::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  background-color: var(--opacidade-fundo);
-} */
-
-/*********************      Menu Fixo   ****************************/
-
-/*
-.menu {
-  width: 15%;
-  height: 100%;
-  background: rgba(218, 191, 255, 0.25);
-  padding: auto;
-  align-self: center;
-  position: fixed;
-  flex: 1;
-  top: 1px;
-}
-
-.menuSection {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.logoTransCode {
-  width: 10.8rem;
-  margin: 3rem auto;
-}
-
-.navegacaoLista {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2.6rem;
-  margin: 8rem auto;
-}
-
-.navegacaoLinks {
-  text-transform: uppercase;
-  color: var(--branco-bandeira);
-  font-weight: bold;
-  font-size: 1.6rem;
-  text-decoration: none;
-}
-
-.logos {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin-top: 8rem;
-}
-
-.logoAlura,
-.logoSuzano {
-  width: 8rem;
-}
-
-/* ---------hamburguer-------- */
-/*
-.hamburger {
-  display: none;
-  background: rgba(218, 191, 255, 0.25);
-  width: 3rem;
-  height: 3.3rem;
-  padding: 1px;
-}
-
-.bar {
-  width: 1.5rem;
-  height: 3px;
-  display: block;
-  color: #fff;
-  padding: 0;
-  margin: 6px;
-  transition: 0.5s;
-  background-color: #fff;
-}
-
-/*********************     conteudo geral   ****************************/
-/*
-
-main {
-  width: 83%;
-  height: 100vh;
-  margin-left: 17%;
-  margin-right: 3%;
-}
-
-.principal {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.principalConteudo {
-  width: 105rem;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  /* z-index: 1; 
-  margin: 0;
-}*/
-
-/*********************      conteudo   ****************************/
-/*
-.tituloQuemSomos {
-  font-size: 2.7rem;
-  font-weight: 700;
-  line-height: 4.3rem;
-  align-self: flex-start;
-  margin-bottom: 5.4rem;
-  margin-left: 5rem;
-}
-
-.videoSection {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  margin: 1rem auto;
-  margin-top: 8rem;
-}
-
-.video {
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-  margin: 0 4rem 5rem 4rem;
-}
-
-.videoTamanho {
-  width: 100%;
-  height: 100%;
-  margin: 4rem;
-}
-
-.vetores {
-  width: 8rem;
-  margin-bottom: 5rem;
-}
-
-.textoQuemSomos {
-  width: 60%;
-  margin: 2rem;
-  font-weight: 500;
-  font-size: 1.6rem;
-}
-
-.chaves {
-  font-size: 3rem;
-  font-weight: 700;
-  align-self: flex-start;
-  margin-top: 2rem;
-  margin-left: 5rem;
-}
-
-/*********** Section 2 **************/
-/*
-.SegundoConteudo {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.titulo2,
-.texto2,
-.titulo3,
-.texto3,
-.linkTexto3 {
-  width: 60%;
-  margin: 2rem;
-  font-weight: 700;
-  font-size: 1.8rem;
-  color: #2f043e;
-  line-height: 2.5rem;
-}
-
-.titulo3,
-.texto3,
-.linkTexto3 {
-  color: #fefefe;
-}
-
-.linkTexto3 {
-  text-decoration: none;
-}
-
-footer {
-  background: linear-gradient(
-    130deg,
-    rgba(252, 70, 107, 1) 0%,
-    rgba(9, 9, 121, 1) 55%,
-    rgba(0, 212, 255, 1) 100%
-  );
-  background-size: 200% 200%;
-  animation: backgroundTransition 8s ease-in-out infinite;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 15rem;
-}
-
-footer img {
-  width: 10%;
-  padding: 2rem;
-}
-
-@keyframes backgroundTransition {
-  0% {
-    background-position: 0% 70%;
-  }
-  50% {
-    background-position: 70% 100%;
-  }
-  100% {
-    background-position: 0% 80%;
-  }
-}
-
-/* -----------menu responsivo---------- */
-/*
-
-@media (max-width: 1025px) {
-  .menu {
-    padding: 5px;
-    width: 17%;
-  }
-}
-
-@media (max-width: 992px) {
-  .menu {
-    background: none;
-  }
-
-  .paginaPrincipal {
-    align-items: flex-start;
-  }
-
-  .vetores {
-    width: 4rem;
-  }
-
-  /* -----menu------ */
-/*
-
-  .hamburger {
-    display: block;
-  }
-
-  .active .bar:nth-child(2) {
-    opacity: 0;
-  }
-
-  .active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(-315deg);
-  }
-
-  .active .bar:nth-child(3) {
-    transform: translateY(-10px) rotate(-45deg);
-  }
-
-  .principalConteudo {
-    z-index: 0;
-  }
-
-  .menuSection {
-    width: 100%;
-    height: 40%;
-    padding-left: 2rem;
-    margin-top: 3.9rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    position: fixed;
-    top: -100%;
-    transition: 0.5s;
-    background: rgba(218, 191, 255, 0.25);
-  }
-
-  .navegacaoLinks {
-    margin: 1rem 0;
-    color: var(--branco-bandeira);
-    padding: 1rem 0;
-  }
-
-  .active {
-    top: 0;
-    transition: 0.3s ease;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .navegacaoLinks {
-    padding: 0.75rem 0;
-  }
-} */
