--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -1,17 +1,4 @@
-.containerConteudo {
+body {
     background: var(--fundo-portfolio);
-}
-
-.conteudoColaboradores {
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.tituloColaboradores {
     font-size: 2.7rem;
-    font-weight: 700;
-    line-height: 4.3rem;
-    align-self: center;
-    margin-top: 1.5rem;
 }
