--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -2,3 +2,28 @@ body {
     background: var(--fundo-pagina-portfolio);
     font-size: 2.7rem;
 }
+
+.divisaoPaginaPrincipal {
+    display: flex;
+    min-height: 100vh;
+    scroll-snap-align: start; /* ONDE QUE O SNAP VAI COMEÇAR (NO TOPO -> START)*/
+  }
+  
+  .paginaPrincipal {
+    width: 85%;
+    padding: 48px 56px;
+    //background: var(--fundo-primeira-pagina);
+    color: var(--branco);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
+  /* ❗❗❗ADICIONEI ESSAS DIVS PRA FICAR MAIS FÁCIL DE DIVIDIR O CONTEÚDO, AÍ COLOQUEI ALGUMAS ALTURAS PRA ELAS */
+  .paginaPrincipalTopo, .paginaPrincipalBottom {
+    height: 12%;
+    width: 100%;
+  }
+  
