--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -3,6 +3,12 @@ body {
     font-size: 2.7rem;
 }
 
+.baseMenu {
+  width: 15%;
+  height: 100vh;
+  background: var(--fundo-pagina-portfolio);
+}
+
 .divisaoPaginaPrincipal {
     display: flex;
     min-height: 100vh;
