--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -32,4 +32,20 @@ body {
     height: 12%;
     width: 100%;
   }
+
+  .cardsConjunto {
+   // width: 70%;   
+    display: flex;
+   // justify-content: flex-end;
+    margin: 1rem;
+    gap:1rem;
+  }
   
+  .cards {
+    border: 1px solid var(--fundo-card);
+    width: 35rem;
+    heigth: 20rem;
+    display: flex;
+    justify-content: center;
+    
+  }
