--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -19,7 +19,7 @@ body {
     width: 85%;
     padding: 48px 56px;
     //background: var(--fundo-primeira-pagina);
-    color: var(--branco);
+    color: var(--roxo);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,9 +33,15 @@ body {
     width: 100%;
   }
 
+  .tituloColaboradores{
+    color: var(--branco);
+    margin-bottom: 1rem;
+  }
+
   .cardsConjunto {
-   // width: 70%;   
+    width: 100%;   
     display: flex;
+    height: 35rem;
    // justify-content: flex-end;
     margin: 1rem;
     gap:1rem;
@@ -43,9 +49,11 @@ body {
   
   .cards {
     border: 1px solid var(--fundo-card);
+    border-radios: 3px;
     width: 35rem;
     heigth: 20rem;
     display: flex;
     justify-content: center;
+    background: var(--fundo-card);
     
   }
