--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -42,18 +42,17 @@ body {
     width: 100%;   
     display: flex;
     height: 35rem;
-   // justify-content: flex-end;
     margin: 1rem;
     gap:1rem;
   }
   
   .cards {
-    border: 1px solid var(--fundo-card);
+    //border: 1px solid var(--fundo-card);
     border-radios: 3px;
-    width: 35rem;
-    heigth: 20rem;
+    width: 36rem;
     display: flex;
     justify-content: center;
     background: var(--fundo-card);
-    
+    pading: 0;
+    margin: 0;
   }
