cardsColaboladores tamanho div

--- a/css/cardsColaboradores.css
+++ b/css/cardsColaboradores.css
@@ -1,5 +1,5 @@
 .ayla{
-
+ width: 100%;
 }
 
 .elizabeth {
@@ -12,17 +12,17 @@
 }
 
 .noah {
-
+  width: 100%;
 }
 
 .oliver {
-
+  width: 100%;
 }
 
 .klaus {
-
+  width: 100%;
 }
 
 .victor {
-  
+  width: 100%;
 }
