--- a/css/pagina-principal.css
+++ b/css/pagina-principal.css
@@ -40,30 +40,19 @@
   gap: 2px;
   font-size: 2.7rem;
   font-weight: 700;
-  /* line-height: 4.3rem; 
-  align-self: flex-start;
-  margin-bottom: 4 rem; 
-  ESSES, COMO EU ADICIONEI HEIGHT FIXO NAS DIVS, NÃO ESTÃO FAZENDO DIFERENÇA AGORA*/
-  /* margin-left: 5rem; O MARGIN-LEFT EU TIRARIA PRA FICAR MAIS FIEL AO FIGMA */
 }
 
 .textoQuemSomos {
   width: 60%;
-  /* margin: 2rem; */
-  margin: 0 auto; /* COLOQUEI ASSIM PORQUE ESSE TEXTINHO ESTÁ MAIS OU MENOS CENTRALIZADA NO FIGMA EM RELAÇÃO AO VIDEO*/
+  margin: 0 auto; 
   font-weight: 500;
   font-size: 1.6rem;
 }
 
 .vetores {
   width: 10rem;
-  /* margin-bottom: 5rem; */
 }
 
 .chaves {
   width: 2.5rem;
-  /* font-weight: 700;
-  align-self: flex-start;
-  margin-top: 2rem;
-  margin-left: 5rem; */
 }
