correções com a mila

--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -47,12 +47,12 @@ body {
   }
   
   .cards {
-    //border: 1px solid var(--fundo-card);
-    border-radios: 3px;
+    /*border: 1px solid var(--fundo-card);*/
+    border-radius: 3px;
     width: 36rem;
     display: flex;
     justify-content: center;
     background: var(--fundo-card);
-    pading: 0;
+    padding: 0;
     margin: 0;
   }
