--- a/css/colaboradores.css
+++ b/css/colaboradores.css
@@ -41,18 +41,17 @@ body {
   .cardsConjunto {
     width: 100%;   
     display: flex;
-    height: 35rem;
-    margin: 1rem;
+    justify-content: center;
+    flex-wrap: wrap;    
     gap:1rem;
   }
   
-  .cards {
-    /*border: 1px solid var(--fundo-card);*/
+  .cards {    
     border-radius: 3px;
-    width: 36rem;
+    width: 33rem;
+    height: 35rem;
     display: flex;
     justify-content: center;
     background: var(--fundo-card);
-    padding: 0;
-    margin: 0;
+    
   }
