--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -37,6 +37,13 @@
     width: 4rem;
   }
 
+  .paginaPrincipalVideo {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+    
+  }
+
   .containerSegundoConteudo{
     width: 100%;
     margin: 0 auto;
@@ -102,4 +109,9 @@
   .navegacaoLinks {
     padding: 0.75rem 0;
   }
+
+  .paginaPrincipalVideo {
+    margin-top: 13rem;
+  }
+  
 } 
