--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -8,22 +8,39 @@
   }
 } */
 
+.invisivel {
+  display: none;
+}
+
 @media (max-width: 992px) {
   .hamburger, .exit {
-    display: initial;
+    display: flex;
     position: absolute;
     left: 24px;
     top: 24px;    
   }
 
+  .exit {
+    z-index: 9999;
+  }
   
   .paginaPrincipal, .segundoConteudo {
     width: 100%;     
   }
 
-  .baseMenu {
+
+  .videoTamanho {
+    width: 374px;
+    height: 210px;
+  }
+
+  .vetores {
     display: none;
   }
+  
+  /* .baseMenu {
+    display: none;
+  } */
 
   .menu {
     display: none;    
@@ -81,14 +98,14 @@
     width: 100%;
     height: 40%;
     padding-left: 2rem;
-    margin-top: 3.9rem;
-    display: flex;
+    /* margin-top: 3.9rem; */
+    display: none;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     flex-wrap: wrap;
     position: fixed;
-    top: -100%;
+    /* top: -100%; */
     transition: 0.5s;
     background: rgb(218, 191, 255);
   }
@@ -104,7 +121,9 @@
     transition: 0.3s ease;
   }
 }
-
+.flex {
+  display: flex;
+}
 @media screen and (max-width: 480px) {
   .navegacaoLinks {
     padding: 0.75rem 0;
