logos menu responsivo

--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -116,6 +116,13 @@
     padding: 1rem 0;
   }
 
+  .logos {    
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center; 
+    width: fit-content;  
+  }
+
   .active {
     top: 0;
     transition: 0.3s ease;
@@ -124,6 +131,7 @@
 .flex {
   display: flex;
 }
+
 @media screen and (max-width: 480px) {
   .navegacaoLinks {
     padding: 0.75rem 0;
@@ -132,5 +140,6 @@
   .paginaPrincipalVideo {
     margin-top: 13rem;
   }
+
   
 } 
