--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -96,18 +96,20 @@
 
   .menuSection {
     width: 100%;
-    height: 40%;
-    padding-left: 2rem;
-    /* margin-top: 3.9rem; */
+    height: 40%;    
     display: none;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center; 
     flex-wrap: wrap;
-    position: fixed;
-    /* top: -100%; */
+    position: fixed;    
     transition: 0.5s;
     background: var(--fundo-menu-responsivo);
+  }
+
+  .logoTransCode {
+    width: 6.5rem;
+    margin: auto;
   }
 
   .navegacaoLista {   
@@ -115,9 +117,9 @@
   }
 
   .navegacaoLinks {
-    margin: 1rem 0;
+    margin: auto;
     color: var(--branco);
-    padding: 1rem 0;
+    padding: auto;
   }
 
   .logos {    
@@ -125,8 +127,13 @@
     justify-content: center;
     align-items: center; 
     width: fit-content;  
-    margin:auto;
+    margin:auto;    
   }
+
+  .logoAlura,
+.logoSuzano {
+  width: 6rem;
+}
 
   .active {
     top: 0;
